# glue-factory

./: .gitignore  .gitmodules  DeepLSDGT.ipynb  README.md  deeplsd_gt.ipynb  deeplsd_gt.py  format.sh  homographyNotebook.ipynb  homographyNotebook1.ipynb  homographyNotebook_with_warp.ipynb  homography_adaptation.py  model_notebook.ipynb  pyproject.toml  run_benchmarks.sh
.github/workflows/: code-quality.yml  python-tests.yml
cluster_scripts/: run_eval_hpatches.sh  run_eval_megadepth.sh  run_training.sh  run_training_euler.sh
docs/: evaluation.md
gluefactory/: __init__.py  settings.py  train.py  trainer.py
gluefactory/cluster/: run_deeplsd_gt.sh  run_eval.sh  run_eval_mp.sh  run_timing.sh  run_training.sh
gluefactory/configs/: COMMON_BENCHMARK_CONF.yaml  COMMON_TRAINING_CONF.yaml  aliked+NN.yaml  aliked+lightglue-official.yaml  aliked+lightglue_homography.yaml  aliked+lightglue_megadepth.yaml  aliked+point-line-eval.yaml  aliked+point-line.yaml  benchmark_01_jpldd+NN_focal.yaml  disk+NN.yaml  disk+lightglue-official.yaml  disk+lightglue_homography.yaml  disk+lightglue_megadepth.yaml  doghardnet+lightglue-official.yaml  doghardnet+lightglue_homography.yaml  doghardnet+lightglue_megadepth.yaml  imcui-zoo.yaml  jpldd+LM.yaml  jpldd+NN.yaml  jpldd.yaml  jpldd_oxparis.yaml  keyaffhardnet+NN.yaml  keyaffhardnet+lightglue-official.yaml  keyaffhardnet+lightglue_homography.yaml  keyaffhardnet+lightglue_megadepth.yaml  lightglue_homography.yaml  lightglue_megadepth.yaml  mast3r.yaml  pold2_line_extractor_test.yaml  pold2_mlp_dataloader_test.yaml  pold2_mlp_train.yaml  pold2_mlp_train_1k.yaml  rk_jpldd_01.yaml  rk_jpldd_02.yaml  rk_jpldd_03.yaml  rk_jpldd_05_correct_gt_pretrained.yaml  rk_jpldd_06_correct_gt.yaml  rk_jpldd_07_correct_gt_step2.yaml  rk_jpldd_08_correct_gt_step3.yaml  rk_jpldd_09_pretrained_faster.yaml  (+36 more)
gluefactory/datasets/: __init__.py  augmentations.py  base_dataset.py  eth3d.py  evd.py  homographies.py  homographies_deeplsd.py  homographies_point_line.py  hpatches.py  image_folder.py  image_pairs.py  image_pairs_npz.py  megadepth.py  merge_datasets.py  minidepth.py  minidepth_train_scenes.txt  minidepth_val_scenes.txt  oxford_paris_images.txt  oxford_paris_mini.py  oxford_paris_mini_1view_jpldd.py  oxford_paris_mini_2.py  oxparis_paris_mini_1view_jpldd.py  pairs_from_colmap.py  pold2_mlp_dataset.py  pold2_mlp_dataset_large.py  posed_images.py  rdnim.py  scannet.py  scannet_test_scenes.txt  scannetv2_train.txt  scannetv2_val.txt  utils.py  wireframe.py  wxbs.py  zeb.py
gluefactory/eval/: __init__.py  eth3d.py  eth3d_pairs.py  eth3d_reconstruction.py  eval_pipeline.py  evd.py  hpatches.py  hpatches_extended.py  hpatches_lines.py  hpatches_lines_H_err.py  hpatches_lines_hardik.py  inspect.py  io.py  megadepth1500.py  megadepth1500_aligned.py  megadepth1500_extended.py  megadepth8scenes.py  rdd_air_ground.py  rdnim_lines.py  run.py  scannet-1500.py  scannet1500.py  timing_measurement.py  utils.py  wireframe.py  wxbs.py  zeb.py
gluefactory/geometry/: depth.py  desc_losses.py  epipolar.py  gt_generation.py  homography.py  homography_adaptation.py  kp_losses.py  line_utils.py  metrics.py  reconstruction.py  transforms.py  utils.py  wrappers.py
gluefactory/ground_truth_generation/: KP_extractor.py  deeplsd_gt_debugging.py  deeplsd_gt_multiple_files.py  generate_gt_deeplsd.py  kp_extractor.py  superpoint_gt_multi_files_heatmap.py  superpoint_gt_multiple_files.py  timing.py
gluefactory/models/: __init__.py  base_model.py  cache_loader.py  deeplsd_inference.py  one_view_pipeline.py  scalelsd_inference.py  triplet_pipeline.py  two_view_pipeline.py
gluefactory/pipelines/: __init__.py
gluefactory/robust_estimators/: __init__.py  base_estimator.py
gluefactory/scripts/: download_gt_samples.py  export_local_features.py  export_megadepth.py  run_inference_jpldd.py
gluefactory/utils/: benchmark.py  export.py  (+17 more)
gluefactory_nonfree/: imcui.py  mast3r.py  superglue.py  superpoint.py
jpl_scripts/: jpldd_linedet_testbed.py  run_benchmarks.sh  run_eval_hpatches.sh  run_eval_megadepth.sh  run_training_dlab.sh  run_training_euler.sh  tune_weakfilter.py  weak_filter_tuning_conf.yaml
mlp_data/: cpu_mode.tar
notebooks/: JPLDD_demo_notebook.ipynb  JPL_demo_notebook.ipynb  deeplsd_gt.ipynb  deeplsd_inference.ipynb  gen_MLP_lines_fields.py  gt_gen_visualizer.ipynb  gt_test.ipynb  h5_visualisation.ipynb  jpldd_linedet_testbed.py  line_detection_felix.ipynb  oxparis_gt_visualization.ipynb  refine_line_detection.ipynb  training_visualization.ipynb  tune_weakfilter.py  visualize_network_predictions.ipynb
tests/: test_eval_utils.py  test_integration.py
(+2176 files in other folders)
