[project]
name = "gluefactory"
description = "Training and evaluation of local feature extraction and matching"
version = "0.0"
authors = [
    {name = "Philipp Lindenberger"},
    {name = "Paul-Edouard Sarlin"},
    {name = "Rémi Pautrat"},
    {name = "Iago Suárez"},
]
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.7",
    "torchvision>=0.8",
    "numpy",
    "opencv-python",
    "tqdm",
    "matplotlib",
    "scipy",
    "h5py",
    "omegaconf",
    "hydra-core",
    "tensorboard",
    "albumentations",
    "kornia",
    "seaborn",
    "joblib",
    "scikit-learn~=1.3.0",
    "lightglue @ git+https://github.com/cvg/LightGlue.git",
]
urls = {Repository = "https://github.com/cvg/glue-factory"}

[project.optional-dependencies]
extra = [
    "pycolmap",
    "poselib",
    "pytlsd @ git+https://github.com/iago-suarez/pytlsd.git@4180ab8990ae68cc9c8797c63aa1dc47b2c714da",
    "deeplsd @ git+https://github.com/cvg/DeepLSD.git",
    "homography_est @ git+https://github.com/rpautrat/homography_est.git@17b200d528e6aa8ac61a878a29265bf5f9d36c41",
]
dev = ["black", "flake8", "isort", "parameterized"]

[tool.setuptools.packages.find]
include = ["gluefactory*"]

[tool.setuptools.package-data]
gluefactory = ["datasets/megadepth_scene_lists/*.txt", "configs/*.yaml"]

[tool.isort]
profile = "black"
extend_skip = ["gluefactory_nonfree/", "third_party/"]
